feat: more porting, 46 errors, loot crate custom tint thing