@@ -1,16 +1,19 @@
 package dev.ftb.mods.ftbquests.quest;
 
+import dev.ftb.mods.ftblibrary.client.icon.IconRenderer;
 import dev.ftb.mods.ftblibrary.config.NameMap;
 import dev.ftb.mods.ftblibrary.icon.Icon;
 import dev.ftb.mods.ftblibrary.icon.ImageIcon;
 import dev.ftb.mods.ftblibrary.math.PixelBuffer;
 import dev.ftb.mods.ftbquests.api.FTBQuestsAPI;
+import dev.ftb.mods.ftbquests.client.QuestShapeRenderer;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.resources.Identifier;
 import net.minecraft.server.packs.resources.Resource;
+import org.jspecify.annotations.NonNull;
 
 import java.io.InputStream;
 import java.util.Collections;
@@ -18,7 +21,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
-public final class QuestShape extends Icon {
+public final class QuestShape extends Icon<QuestShape> {
 	private static final Map<String, QuestShape> MAP = new LinkedHashMap<>();
 	private static QuestShape defaultShape;
 
@@ -44,9 +47,9 @@ public final class QuestShape extends Icon {
 		list.forEach(s -> MAP.put(s, new QuestShape(s)));
 
 		defaultShape = MAP.values().iterator().next();
-		idMap = NameMap.of(list.get(0), list).baseNameKey("ftbquests.quest.shape").create();
-		list.add(0, "default");
-		idMapWithDefault = NameMap.of(list.get(0), list).baseNameKey("ftbquests.quest.shape").create();
+		idMap = NameMap.of(list.getFirst(), list).baseNameKey("ftbquests.quest.shape").create();
+		list.addFirst("default");
+		idMapWithDefault = NameMap.of(list.getFirst(), list).baseNameKey("ftbquests.quest.shape").create();
 	}
 
 	public static QuestShape get(String id) {
@@ -55,13 +58,6 @@ public final class QuestShape extends Icon {
 
 	public String toString() {
 		return "quest_shape:" + id;
-	}
-
-	@Override
-	@Environment(EnvType.CLIENT)
-	public void draw(GuiGraphics graphics, int x, int y, int w, int h) {
-		background.draw(graphics, x, y, w, h);
-		outline.draw(graphics, x, y, w, h);
 	}
 
 	public ImageIcon getBackground() {
@@ -83,6 +79,12 @@ public final class QuestShape extends Icon {
 	public boolean equals(Object o) {
 		return o == this;
 	}
+
+	@Override
+	public @NonNull IconRenderer<QuestShape> getRenderer() {
+		return QuestShapeRenderer.INSTANCE;
+	}
+
 
 	public PixelBuffer getShapePixels() {
 		if (shapePixels == null) {
